--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@testing-library/react": "^11.1.0",
-    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-react-simple": "^1.0.2",
     "cypress": "^4.8.0",
-    "eslint": "^6.8.0",
-    "eslint-config-helloitsjoe": "^1.2.4",
+    "eslint": "^7",
+    "eslint-config-helloitsjoe": "^2.0.1",
     "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -47,10 +47,12 @@
     "jest-simple-config": "^0.2.4",
     "nock": "^13.0.4",
     "nodemon": "^2.0.2",
+    "prettier": "^2.6.0",
     "webpack-simple": "^1.5.2"
   },
   "scripts": {
     "lint": "eslint '**/*.js' --ignore-pattern public/",
+    "format": "prettier --write .",
     "test:unit": "jest --runInBand --testPathIgnorePatterns=db.test.js",
     "test:db": "jest --runInBand",
     "test": "docker-compose run --rm test && yarn stop:db",
